syntax = "proto3";

package io.americanexpress.service.hello.reactive.grpc;

option java_multiple_files = true;
option java_package = "io.americanexpress.service.hello.reactive.grpc";
option java_outer_classname = "HelloWorldProto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
